Add searching function
